[package]
name = "gff-utils"
version = "0.1.0"
edition = "2021"
authors = ["Francesco Rubino"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bio_rascal = {path = "../bio-rascal"}
clap = { version = "4.1", features = ["derive"] }
clap_complete = "4.1"
env_logger = "0.10"
indicatif = "0.17"
itertools = "0.10.5"
log = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
