[package]
name = "gff-utils"
version = "0.1.0"
edition = "2021"
authors = ["Francesco Rubino"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bio_rascal = { version = "0.1", git = "https://git.kalpa.synology.me/Lavoro/bio-rascal.git", branch = "main" }
clap = { version = "4.1", features = ["derive"] }
clap_complete = "4.1"
env_logger = "0.10"
flate2 = "1.0"
itertools = "0.10"
log = "0.4"
uuid = { version = "1.3.3", features = ["v4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
